# Oai

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Clippy_zh_CN.ts  Oai_zh_CN.ts  Qlippy_zh_CN.ts  README.md  README_CN.md  Seelie_zh_CN.ts  main.cpp
.claude/skills/import-live2d-models/: SKILL.md
.claude/skills/oai-build-deploy/: SKILL.md
.claude/skills/oai-gateway-setup/: SKILL.md
.claude/skills/oai-server/: SKILL.md
.claude/skills/seelie-build-deploy/: SKILL.md
.claude/skills/seelie-codex-pet/: SKILL.md
.claude/skills/seelie-gateway-setup/: SKILL.md
.claude/skills/seelie-server/: SKILL.md
.github/workflows/: build.yml  publish-npm.yml
artworks/: README.md
assets/: icons.qrc  oai.icns  oai.rc  oai.rc.in  qlippy.icns  qlippy.rc  seelie.icns  seelie.rc.in  tips.qrc
assets/i18n/: tips.en.json  tips.zh_CN.json
assets/lottie/character/: alert.json  click1.json  click2.json  congratulate.json  doubleclick1.json  doubleclick2.json  explain.json  gesture_down.json  getattentionyawn.json  idle1.json  idle2.json  idle3.json  lookdown.json  lookleft.json  lookright.json  lookup.json  rest.json  sendmail.json  thinking.json  wave.json
assets/lottie/effects/: alert-pulse.json  confetti.json  sparkles.json  speech-pop.json  thinking-dots.json  wave-lines.json
assets/packs-disabled/bonzi/: manifest.json
assets/packs-disabled/clippy/: manifest.json
assets/packs-disabled/f1/: manifest.json
assets/packs-disabled/genie/: manifest.json
assets/packs-disabled/genius/: manifest.json
assets/packs-disabled/links/: manifest.json
assets/packs-disabled/merlin/: manifest.json
assets/packs-disabled/peedy/: manifest.json
assets/packs-disabled/rocky/: manifest.json
assets/packs-disabled/rover/: manifest.json
assets/packs/abercrombie/: abeikelongbi_3.model3.json  manifest.json
assets/packs/adalbert/: adaerbote_3.model3.json  manifest.json
assets/packs/aersasi/: aersasi_3.model3.json  manifest.json
assets/packs/aidang/: aidang_2.model3.json  manifest.json
assets/packs/ajax/: manifest.json
assets/packs/akagi/: chicheng_5.model3.json  manifest.json
assets/packs/al_abeikelongbi/: manifest.json
assets/packs/al_adaerbote/: manifest.json
assets/packs/al_aerbien/: aerbien_3.model3.json  manifest.json
assets/packs/al_aierdeliqi/: manifest.json
assets/packs/al_aijier/: aijier_4.model3.json  manifest.json
assets/packs/al_ailunsamuna/: manifest.json
assets/packs/al_aimierbeierding/: aimierbeierding_3.model3.json  manifest.json
assets/packs/al_aimudeng/: aimudeng_2.model3.json  manifest.json
assets/packs/al_aisaikesi/: aisaikesi_4.model3.json  manifest.json
assets/packs/al_ankeleiqi/: ankeleiqi_4.cdi3.json  ankeleiqi_4.model3.json  manifest.json
assets/packs/al_anninvwang/: anninvwang_2.cdi3.json  anninvwang_2.model3.json  manifest.json
assets/packs/al_baerdimo/: baerdimo_6.model3.json  manifest.json
assets/packs/al_baifeng/: baifeng_2.model3.json  manifest.json
assets/packs/al_bailong/: bailong_3.model3.json  manifest.json
assets/packs/al_banerwei/: banerwei_3.model3.json  manifest.json
assets/styles/: seelie.qss
cmake/: patch_cubism_gl.py
codex-pet/: README.md
codex-pet/seelie/: pet.json
gateways/claude-code/: README.md  hook.sh  install.mjs  package.json  settings.json
gateways/claude-code-hooks/: settings.json
gateways/clippy-gateway/: cli.mjs  package.json
gateways/codex/: README.md  hooks.json  install.mjs  package.json  parser.mjs
gateways/codex-hooks/: hooks.json
gateways/codex-jsonl-parser/: parser.mjs
gateways/oai-gateway/: cli.mjs  package.json
gateways/opencode/: README.md  package.json  plugin.mjs
gateways/opencode-plugin/: clippy.mjs  ipc.mjs  qlippy.mjs
gateways/orai-gateway/: cli.mjs  package.json
gateways/qlippy-gateway/: cli.mjs  package.json
gateways/seelie-gateway/: cli.mjs  package.json
gateways/shared/: ipc.mjs  package.json
installer/: config.xml  config.xml.in  oai.ini.template  seelie.ini.template
installer/inno/: seelie.iss
installer/translations/: oai_installer_en.ts  oai_installer_zh_CN.ts  seelie_installer_en.ts  seelie_installer_zh_CN.ts
schemas/: character-pack-v1.schema.json  sprite-pack-v1.schema.json
scripts/: build_inno.py  build_release.py  fix_lottie_keyframes.py  hide_dock_icon.py  import_clippyjs_agent.py  import_live2d.py  pack_opk.py  pack_spk.py
server/: .gitignore  rebar.config
server/config/: sys.config  vm.args
server/src/: protocol.erl  server.app.src  server_app.erl  server_sup.erl  udp_server.erl  update_handler.erl
server/test/: protocol_tests.erl
src/: AnalyticsProvider.h  AnalyticsTracker.cpp  AnalyticsTracker.h  AnimationEngine.h  AutoStartManager.cpp  AutoStartManager.h  CanonicalEvents.h  CharacterPack.cpp  CharacterPack.h  CharacterPackLoader.cpp  CharacterPackLoader.h  CharacterPackManager.cpp  CharacterPackManager.h  ConfigManager.cpp  ConfigManager.h  EcgWidget.cpp  EcgWidget.h  EmotionEngine.cpp  EmotionEngine.h  EventRouter.cpp  EventRouter.h  FullscreenWatcher.cpp  FullscreenWatcher.h  Ga4Provider.cpp  Ga4Provider.h  GlobalShortcutManager.cpp  GlobalShortcutManager.h  IpcServer.cpp  IpcServer.h  Live2DAnimationEngine.cpp  Live2DAnimationEngine.h  LottieAnimationEngine.cpp  LottieAnimationEngine.h  LottieEffectOverlay.cpp  LottieEffectOverlay.h  MacFocusFix.h  MacFocusFix.mm  MockProvider.cpp  MockProvider.h  PackDropHandler.cpp  (+44 more)
src/tts/: AzureSpeechProvider.cpp  AzureSpeechProvider.h  ITtsProvider.h  MiniMaxHttpProvider.cpp  MiniMaxHttpProvider.h  OpenAiTtsProvider.cpp  OpenAiTtsProvider.h  ProviderConfig.h  StepFunHttpProvider.cpp  StepFunHttpProvider.h  TtsProviderRegistry.cpp  TtsProviderRegistry.h  TtsVoiceCache.cpp  TtsVoiceCache.h
tests/: CMakeLists.txt  test_autostart_manager.cpp  test_character_pack_manager_errors.cpp  test_ecg.cpp  test_gaming_mode.cpp  test_ipc_animations.cpp  test_pet_state_machine.cpp  test_platform_window.cpp  test_tts_engine.cpp  test_tts_providers.cpp  test_tts_voice_cache.cpp
tests/manual/: test_tts_live.cpp
(+2271 files in other folders)
